# fair_neighborhood

./: .gitignore  pyproject.toml
notebooks/: ML1M-Agentic.ipynb  ML1M.ipynb  New-ML1M.ipynb
src/helper_functions/: llm_functions.py
src/recommenders/: ease.py
