[tool.poetry]
name = "umap24"
version = "0.1.0"
description = ""
authors = ["Stavroula Eleftherakis"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
recpack = "^0.3.6"
prettytable = "^3.10.0"
bottleneck = "^1.3.8"
matplotlib = "^3.8.4"
ipywidgets = "^8.1.2"
jupyterlab = "^4.4.3"
openai = "^1.102.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
